CRUD is done for SharpDBFile.

--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -42,7 +42,15 @@
     <Compile Include="Class1.cs" />
     <Compile Include="FileDBContext.cs" />
     <Compile Include="FileObject.cs" />
+    <Compile Include="InvalidFileName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringWriterWithEncoding.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="FileDBContext.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FileDBContext.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
