--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -42,8 +42,10 @@
     <Compile Include="FileDBContext.cs" />
     <Compile Include="FileObject.cs" />
     <Compile Include="InvalidFileName.cs" />
+    <Compile Include="IPersistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringWriterWithEncoding.cs" />
+    <Compile Include="XmlPersistence.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="FileDBContext.cd" />
