--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryPersistence.cs" />
     <Compile Include="FileDBContext.cs" />
     <Compile Include="FileObject.cs" />
     <Compile Include="InvalidFileName.cs" />
