--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,14 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryPersistence.cs" />
+    <Compile Include="DefaultPersistence.cs" />
     <Compile Include="FileDBContext.cs" />
     <Compile Include="FileObject.cs" />
-    <Compile Include="InvalidFileName.cs" />
+    <Compile Include="ImageHelper.cs" />
     <Compile Include="IPersistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringWriterWithEncoding.cs" />
-    <Compile Include="XmlPersistence.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="FileDBContext.cd" />
