--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteArrayHelper.cs" />
     <Compile Include="DefaultPersistence.cs" />
     <Compile Include="FileDBContext.cs" />
     <Compile Include="FileObject.cs" />
