--- a/SharpFileDB.Demo.MyNote/SharpFileDB.Demo.MyNote.csproj
+++ b/SharpFileDB.Demo.MyNote/SharpFileDB.Demo.MyNote.csproj
@@ -50,6 +50,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAddNote.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAddNote.Designer.cs">
+      <DependentUpon>FormAddNote.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormNoteList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tables\Note.cs" />
+    <EmbeddedResource Include="FormAddNote.resx">
+      <DependentUpon>FormAddNote.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormNoteList.resx">
       <DependentUpon>FormNoteList.cs</DependentUpon>
     </EmbeddedResource>
