add the skip list algorithm.

--- a/SharpFileDB.TestConsole/SharpFileDB.TestConsole.csproj
+++ b/SharpFileDB.TestConsole/SharpFileDB.TestConsole.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DemoGuid.cs" />
     <Compile Include="DemoMaxFilesInDirectory.cs" />
     <Compile Include="DemoSingleFileDB.cs" />
+    <Compile Include="DemoSkipList.cs" />
     <Compile Include="DemoTcpMsg.cs" />
     <Compile Include="KittyCat.cs" />
     <Compile Include="Program.cs" />
