--- a/SharpFileDB.TestConsole/SharpFileDB.TestConsole.csproj
+++ b/SharpFileDB.TestConsole/SharpFileDB.TestConsole.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -47,7 +48,6 @@
     <Compile Include="DemoGuid.cs" />
     <Compile Include="DemoMaxFilesInDirectory.cs" />
     <Compile Include="DemoSingleFileDB.cs" />
-    <Compile Include="DemoSkipList.cs" />
     <Compile Include="DemoTcpMsg.cs" />
     <Compile Include="KittyCat.cs" />
     <Compile Include="Program.cs" />
