Using less chars means less bytes after serialization
使用的字符越少，序列化时占用的字节就越少。

--- a/SharpFileDB.TestConsole/SharpFileDB.TestConsole.csproj
+++ b/SharpFileDB.TestConsole/SharpFileDB.TestConsole.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cat.cs" />
+    <Compile Include="DemoDocumentMeta.cs" />
     <Compile Include="DemoGuid.cs" />
     <Compile Include="DemoMaxFilesInDirectory.cs" />
     <Compile Include="DemoSingleFileDB.cs" />
