--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DocumentNode.cs" />
+    <Compile Include="FreeBytesNode.cs" />
+    <Compile Include="Helper\DocumentHelper.cs" />
+    <Compile Include="IIndex.cs" />
     <Compile Include="NGenerics.DataStructures\IVisitable.cs" />
     <Compile Include="NGenerics.DataStructures\IVisitableCollection.cs" />
     <Compile Include="NGenerics.DataStructures\IVisitableDictionary.cs" />
@@ -57,6 +61,7 @@
     <Compile Include="Helper\ImageHelper.cs" />
     <Compile Include="IPersistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="NGenerics.DataStructures\SkipList.cd" />
