--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -43,9 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocumentNode.cs" />
+    <Compile Include="FreeSpaceManager.cs" />
     <Compile Include="FreeSpaceNode.cs" />
     <Compile Include="Helper\DocumentHelper.cs" />
+    <Compile Include="Helper\ObjectLengthHelper.cs" />
     <Compile Include="IIndex.cs" />
+    <Compile Include="Impl\SingleFileDBPersistence.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="NGenerics.DataStructures\IVisitable.cs" />
     <Compile Include="NGenerics.DataStructures\IVisitableCollection.cs" />
     <Compile Include="NGenerics.DataStructures\IVisitableDictionary.cs" />
@@ -61,15 +66,19 @@
     <Compile Include="Helper\ImageHelper.cs" />
     <Compile Include="IPersistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableManager.cs" />
     <Compile Include="TableNode.cs" />
+    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="NGenerics.DataStructures\SkipList.cd" />
     <None Include="FileDBContext.cd" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NGenerics.DataStructures\SkipList.png" />
     <Content Include="FileDBContext.png" />
+    <Content Include="NGenerics.DataStructures\SkipList.png" />
+    <Content Include="SharpFileDB.FileFormat-level0.jpg" />
+    <Content Include="SharpFileDB.FileFormat-level1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
