--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -62,6 +62,7 @@
     <Compile Include="FileDBContext.cs" />
     <Compile Include="Document.cs" />
     <Compile Include="Helper\ImageHelper.cs" />
+    <Compile Include="Pages\PageAddress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableManager.cs" />
     <Compile Include="TableNode.cs" />
@@ -79,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Impl\" />
+    <Folder Include="NewFolder1\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
