--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -42,7 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBHeader.cs" />
     <Compile Include="Helper\ObjectLengthHelper.cs" />
     <Compile Include="NGenerics.DataStructures\IVisitable.cs" />
     <Compile Include="NGenerics.DataStructures\IVisitableCollection.cs" />
@@ -59,8 +58,6 @@
     <Compile Include="Pages\BasePage.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Pages\Structures\TableIndex.cs" />
-    <Compile Include="Pages\Structures\DataBlock.cs" />
     <Compile Include="Pages\DataPage.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -73,17 +70,16 @@
     <Compile Include="Pages\ExtendPage.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Pages\Structures\IndexNode.cs" />
-    <Compile Include="Pages\Structures\IndexOptions.cs" />
     <Compile Include="Pages\IndexPage.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Pages\Structures\PageAddress.cs" />
-    <Compile Include="Pages\Structures\PageHeaderInfo.cs" />
+    <Compile Include="BasicStructures\PageAddress.cs" />
+    <Compile Include="BasicStructures\PageHeaderInfo.cs" />
     <Compile Include="Pages\TablePage.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DiskService.cs" />
     <Compile Include="Table.cs" />
   </ItemGroup>
   <ItemGroup>
