--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -79,8 +79,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CacheService.cs" />
     <Compile Include="Services\DiskService.cs" />
     <Compile Include="Table.cs" />
+    <Compile Include="Utils\DictionaryExtensions.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Utils\IOExceptionExtensions.cs">
       <SubType>Code</SubType>
     </Compile>
