--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -81,6 +81,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CacheService.cs" />
     <Compile Include="Services\DiskService.cs" />
+    <Compile Include="Services\PageService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Table.cs" />
     <Compile Include="Utils\DictionaryExtensions.cs">
       <SubType>Code</SubType>
@@ -88,6 +91,7 @@
     <Compile Include="Utils\IOExceptionExtensions.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Utils\PageIDHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Pages\Pages.cd" />
