--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -45,12 +45,16 @@
     <Compile Include="Blocks\Block.cs" />
     <Compile Include="Blocks\BlockHelper.cs" />
     <Compile Include="Blocks\DataBlock.cs" />
-    <Compile Include="Blocks\HeaderBlock.cs" />
+    <Compile Include="Blocks\DBHeaderBlock.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Blocks\IDoubleLinkedNode.cs" />
     <Compile Include="Blocks\IFourSideLinkedNode.cs" />
     <Compile Include="Blocks\IndexBlock.cs" />
+    <Compile Include="Blocks\PageHeaderBlock.cs" />
     <Compile Include="Blocks\SkipListNodeBlock.cs" />
     <Compile Include="Blocks\TableBlock.cs" />
+    <Compile Include="Services\DiskService.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="ObjectId.cs">
       <SubType>Code</SubType>
