--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Blocks\IDoubleLinkedNode.cs" />
     <Compile Include="Blocks\IFourSideLinkedNode.cs" />
     <Compile Include="Blocks\IndexBlock.cs" />
+    <Compile Include="Blocks\IUpdatable.cs" />
     <Compile Include="Blocks\PageHeaderBlock.cs" />
     <Compile Include="Blocks\SkipListNodeBlock.cs" />
     <Compile Include="Blocks\TableBlock.cs" />
