--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Utilities\FileDBContextHelper.cs" />
     <Compile Include="Utilities\IComparableHelper.cs" />
     <Compile Include="Utilities\IndexBlockHelper.cs" />
+    <Compile Include="Utilities\SkipListNodeBlockHelper.cs" />
     <Compile Include="Utilities\TableHelper.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="Utilities\Consts.cs" />
